# IDENT

./: CMakeLists.txt  README.md
build-Ident-CLang12-Release/: CMakeCache.txt  Makefile  cmake_install.cmake
build-Ident-CLang12-Release/.cmake/api/v1/reply/: cache-v2-c03960480bb4a2e6672c.json  cmakeFiles-v1-19bd11e1af2e80f7efed.json  codemodel-v2-e5de4b193214b3721f73.json  index-2022-06-24T14-20-23-0810.json  target-ident-Release-6ae3074c6d5daf3bf80b.json
build-Ident-CLang12-Release/src/: Makefile  cmake_install.cmake  ident
geometric_progress/include/: identificator.h
geometric_progress/src/: identificator.cpp  main.cpp  main.cpp.MhLfUP
include/: identificator.h
src/: CMakeLists.txt  identificator.cpp  main.cpp
